# PrivatePilotCLI

./: .gitignore  README.md  pyproject.toml  skills.md
.github/workflows/: security.yml
src/privatepilotcli/: config.py  main.py  mcp_manager.py  ollama_client.py  repl.py  session.py  skills.py  tool_router.py
src/privatepilotcli/servers/: ping_server.py
