[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privatepilotcli"
version = "0.1.0"
description = "Local AI CLI powered by Ollama with MCP tool support"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.4.0",
    "mcp>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "anyio>=4.0.0",
]

[project.scripts]
ppilot = "privatepilotcli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/privatepilotcli"]

[tool.pip-audit]
# NLTK is not a project dependency — it is a transitive dep of the safety/pip-audit toolchain.
# These CVEs are ignored because they cannot affect this project's code.
ignore-vulns = [
    "GHSA-rf74-v2fm-23pw",
    "CVE-2026-33230",
    "CVE-2026-33231",
]
